--- a/public/translations/ru.json
+++ b/public/translations/ru.json
@@ -36,7 +36,8 @@
 			"searcher": "Старший исследователь",
 			"professor": "Професор"
 		},
-		"categories": ["Специалист", "Специалист 2 категории", "Специалист 1 категории", "Специалист высшей категории"]
+		"categories": ["Специалист", "Специалист 2 категории", "Специалист 1 категории", "Специалист высшей категории"],
+		"qualList": ["Младший специалист", "Бакалавр", "Магистр"]
 	},
 
 	"messages": {
@@ -194,13 +195,7 @@
 				"title": "Повышения квалификаций",
 				"nextDate": "Термин следующей квалификации: {{nextDate}}",
 				"category": "Категория",
-				"date": "Дата",
-				"categories": [
-					"Специалист",
-					"Специалист 2 категории",
-					"Специалист 1 категории",
-					"Специалист висшей категории"
-				]
+				"date": "Дата"
 			},
 			"honors": {
 				"title": "Награды",
@@ -216,12 +211,6 @@
 			"educations": {
 				"title": "Образования",
 				"qualification": "Квалификация",
-				"qualList": [
-					"Все",
-					"Младший специалист",
-					"Бакалавр",
-					"Магистр"
-				],
 				"institutionName": "Учебное заведение",
 				"graduateYear": "Год выпуска"
 			}
@@ -543,7 +532,6 @@
 
 	"qualifications": {
 		"name": "Повышения категорий",
-		"categories": ["Специалист", "Специалист 2 категории", "Специалист 1 категории", "Специалист высшей категории"],
 		"all": {
 			"pageTitle": "Повышения категорий",
 			"noForm": "повышений",
