Imports and exports fix

--- a/public/translations/en.json
+++ b/public/translations/en.json
@@ -1,5 +1,7 @@
 {
 	"common": {
+		"generate": "Generating...",
+		"stop": "Cancel download",
 		"edit": "Edit",
 		"import": "Import",
 		"export": "Export",
