--- a/public/translations/ru.json
+++ b/public/translations/ru.json
@@ -1,5 +1,7 @@
 {
 	"common": {
+		"generate": "Генерируется...",
+		"stop": "Отменить загрузку",
 		"edit": "Редактировать",
 		"import": "Импорт",
 		"export": "Экспорт",
