--- a/public/translations/uk.json
+++ b/public/translations/uk.json
@@ -1,5 +1,7 @@
 {
 	"common": {
+		"generate": "Генерується...",
+		"stop": "Відмінити завантаження",
 		"edit": "Редагувати",
 		"import": "Імпорт",
 		"export": "Експорт",
