Add components tests

--- a/public/translations/en.json
+++ b/public/translations/en.json
@@ -1,6 +1,7 @@
 {
 	"common": {
 		"generate": "Generating...",
+		"errorOccurred": "Error occurred",
 		"stop": "Cancel download",
 		"edit": "Edit",
 		"import": "Import",
