--- a/public/translations/ru.json
+++ b/public/translations/ru.json
@@ -1,6 +1,7 @@
 {
 	"common": {
 		"generate": "Генерируется...",
+		"errorOccurred": "Произошла ошибка",
 		"stop": "Отменить загрузку",
 		"edit": "Редактировать",
 		"import": "Импорт",
