--- a/public/translations/uk.json
+++ b/public/translations/uk.json
@@ -1,6 +1,7 @@
 {
 	"common": {
 		"generate": "Генерується...",
+		"errorOccurred": "Сталася помилка",
 		"stop": "Відмінити завантаження",
 		"edit": "Редагувати",
 		"import": "Імпорт",
