--- a/public/translations/en.json
+++ b/public/translations/en.json
@@ -120,9 +120,9 @@
 		"dateMore_equal": "Field must be more or equal to {{field}}",
 		"email": "Field must be email",
 		"lengthIn": "Field must be",
-		"lengthIn_from": "$t(validators.lengthIn) from {{min}}",
-		"lengthIn_to": "$t(validators.lengthIn) to {{max}}",
-		"lengthIn_from_to": "$t(validators.lengthIn) from {{min}} to {{max}}",
+		"lengthIn_from": "$Field must be from {{min}}",
+		"lengthIn_to": "Field must be to {{max}}",
+		"lengthIn_both": "Field must be from {{min}} to {{max}}",
 		"phone": "Field must be valid phone number",
 		"positive": "Field must be positive number",
 		"required": "Field is required",
