--- a/public/translations/uk.json
+++ b/public/translations/uk.json
@@ -115,9 +115,9 @@
 		"dateMore_equal": "Поле має бути більше або рівне {{field}}",
 		"email": "Поле має бути email",
 		"lengthIn": "Поле має мати значення",
-		"lengthIn_from": "$t(validators.lengthIn) від {{min}}",
-		"lengthIn_to": "$t(validators.lengthIn) до {{max}}",
-		"lengthIn_from_to": "$t(validators.lengthIn) від {{min}} до {{max}}",
+		"lengthIn_from": "Поле має мати значення від {{min}}",
+		"lengthIn_to": "Поле має мати значення до {{max}}",
+		"lengthIn_both": "Поле має мати значення від {{min}} до {{max}}",
 		"phone": "Поле має бути телефоном",
 		"positive": "Поле має бути додатнє число",
 		"required": "Поле обов'язкове для заповнення",
